--- a/ll.html
+++ b/ll.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+</head> 
 <body>
     <h1>bonjour</h1>
     <p>cv</p>
+    <table border="1" cellpadding="5" cellspacing="0">
+        <thead>
+          <tr>
+            <th>Activité</th>
+            <th>Objectif principal</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Autoformation</td>
+            <td>Découverte, apprentissage guidé</td>
+          </tr>
+          <tr>
+            <td>Prototype</td>
+            <td>Test d’une idée ou d’un outil</td>
+          </tr>
+          <tr>
+            <td>Mini-projet</td>
+            <td>Mise en application pratique</td>
+          </tr>
+          <tr>
+            <td>Projet fil rouge</td>
+            <td>Projet complet, démarche finale</td>
+          </tr>
+        </tbody>
+      </table>
+      
 </body>
 </html>
