--- a/ll.html
+++ b/ll.html
@@ -34,6 +34,29 @@
           </tr>
         </tbody>
       </table>
+      <table border="1" cellpadding="5" cellspacing="0">
+        <thead>
+          <tr>
+            <th>Niveau</th>
+            <th>Objectif attendu</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Niveau 1</td>
+            <td>Compréhension et reproduction</td>
+          </tr>
+          <tr>
+            <td>Niveau 2</td>
+            <td>Application et adaptation</td>
+          </tr>
+          <tr>
+            <td>Niveau 3</td>
+            <td>Création autonome</td>
+          </tr>
+        </tbody>
+      </table>
+      
       
 </body>
 </html>
